Closed Bug 957858 Opened 12 years ago Closed 12 years ago

gfx\layers\basic/TextureHostBasic.cpp(34) : warning C4065: switch statement contains 'default' but no 'case' labels

Categories

(Core :: Graphics: Layers, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug, )

Details

(Whiteboard: [qa-])

Attachments

(1 file)

Build warning, found when trying bug 957784: gfx\layers\basic/TextureHostBasic.cpp(34) : warning C4065: switch statement contains 'default' but no 'case' labels (The compiler thinks there are no 'case' labels because the only case is #ifdeffed out.) I don't think we need a switch statement here at all -- we should just simplify this.
Blocks: buildwarning
Attached patch fix v1Splinter Review
This just converts the switch statement into a single "if" block.
Attachment #8357473 - Flags: review?(nical.bugzilla)
Attachment #8357473 - Flags: review?(nical.bugzilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: