Bug 957858: Drop unnecessary 'switch' in CreateTextureHostBasic, to fix MSVC C4065 warning. r=nical